  - daemon configuration moved to menu Configuration (alec)
  - changed table name 'daemonhosts' to 'hosts' (alec)
  - lmsd/parser: changed tscript's API, added extensions: deletefile, 
    readfile, getfile, listdir, fileexists, date, replace, systype (alec)
  - Credit Notes - WARNING! Invoice templates has been changed (alec)
  - Cygwin support for lmsd (lexx)

version 1.7.2 Doci (2005-08-13):

  - in Mailing added replacement variables (alec)
  - in Nodes List added network and status filtering (alec)
  - in Nodes -> Print added network filter (alec)
  - in Balance Sheet and Customer Balance added dynamic popups with invoice 
    and receipt numbers (alec)
  - lms-payments: fixed unwanted params binding in DBI's execute method (alec)
  - fixed tax calculations on Sale Registry (alec)
  - sticky/clickable nodelistshort (alec)
  - upgraded OverLIB to 4.17 version (alec)
  - now is possible to define tariff without tax (alec)
  - contrib/customer_otherip: balanceviewuserinfomini.html renamed to
    customerinfomini.html (alec)
  - lmsd/payments: fixed number of query parameters (alec)
  - gadu-gadu status checking only for lang = pl (alec)
  - print_balance_history on invoices now really works (hunter)
  - critical bug: SESSION::remove() doesn't update session, so after restore
    session removed variable was still avaiable (lukasz)
  - added missing |escape modifier in register template (lukasz)
  - fixed bug in SQL query in Mailing with network filtering (alec)
  - BTS#0000407: fixed page number problem in netdevices list (alec/MadMark)
  - customer documents archive (alec)
  - lmsd/(gg)notify: added %b, %B, %pin variables for template (alec)
  - in database changed periods constants: 5-yearly, 4-quarterly, 3-monthly,
    2-weekly (alec)
  - in 'payments' and 'assignments' tables changed 'period' and 'at' columns
    type to smallint (alec)
  - added accounting period: 1-daily (alec)
  - fixed bugs related to charset encoding and timeouts